<package format="3">
  <name>corn</name>
  <version>0.0.1</version>
  <description>LiDAR clustering with DBSCAN + cone filtering</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>opencv</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
